--- a/src/components/EmailField.css
+++ b/src/components/EmailField.css
@@ -7,7 +7,6 @@
 }
 
     .input-control {
-        background-color: hsl(0, 47%, 90%);
         color: hsl(0, 40%, 76%);  
         font-family: 'Josefin Sans', sans-serif;
         font-size: 1rem;
@@ -19,15 +18,25 @@
         outline: none;
     }
 
+    .input-control::placeholder {
+        color: hsl(0, 40%, 76%);  
+    }
+
     .button-control {
         font-family: 'Josefin Sans', sans-serif;
         border-radius: 50px;
         background-color: hsl(0, 55%, 76%);
         color:hsl(0, 98%, 98%);
         border: 1px solid hsl(0, 55%, 76%);
-        width: 4.5rem;
-        height: 3.7rem;
-        font-size: 1.5rem;
-        margin-left: -4rem;
+        width: 6rem;
+        height: 3rem;
+        font-size: 2rem;
+        margin-left: -5rem;
         box-shadow: 0px 5px 10px -4px rgba(222,135,135,0.72);
+    }
+
+    @media screen and (min-width: 720px) {
+        .form-div {
+            justify-content:center;
+        } 
     }
