--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 .App {
   width: 100vw;
-  height: 100vh;
+  height: auto;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr 1fr auto;
